# postgrest-rs

./: Cargo.toml  README.md
src/: error.rs  json.rs  lib.rs  result.rs
src/builder/: filter.rs  mod.rs  query.rs
src/client/: mod.rs
