[package]
name = "postgrest"
authors = ["HAKUMI", "katsumi143 <katsumi@hakumi.cafe>"]
version = "0.1.1"
edition = "2021"

[dependencies]
url = "2.5"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12"
simd-json = { version = "0.13", optional = true }
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }